syntax = "proto3";

package pb;

option go_package = "ticket-reservation/proto;pb";

service ConcertService {
  rpc GetConcerts(Empty) returns (ConcertList);
  rpc BookTicket(BookRequest) returns (BookResponse);
}

message Empty {}

message Concert {
  int32 id = 1;
  string name = 2;
  int32 available_tickets = 3;
  string start_time = 4;
  string end_time = 5;
}

message ConcertList {
  repeated Concert concerts = 1;
}

message BookRequest {
  int32 concert_id = 1;
  int32 user_id = 2;
  int32 quantity = 3;
}

message BookResponse {
  string status = 1;
  string message = 2;
}

message SearchRequest {
  string name = 1;
}